chore(publish.yml): add permissions for write access to contents to enable git tag pushing

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # Needed to push git tags
     steps:
       - uses: actions/checkout@v4
           
