--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,7 +40,7 @@ jobs:
         if: steps.version_check.outputs.should_publish == 'true'
         run: |
           cargo login ${{ secrets.CARGO_REGISTRY_TOKEN }}
-          cargo publish
+          cargo publish --allow-dirty
           
       - name: Create Git tag
         if: steps.version_check.outputs.should_publish == 'true'
