--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,10 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 # File operations
 sha2 = "0.10"
 walkdir = "2.5"
+tempfile = "3.10"
+flate2 = "1.0"
+tar = "0.4"
+zip = "2.1"
 
 # Authentication
 keyring = { version = "3.0", features = ["apple-native", "windows-native", "linux-native"] }
@@ -56,6 +60,8 @@ tiny_http = "0.12"
 open = "5.0"
 url = "2.5"
 urlencoding = "2.1"
+
+
 
 [dev-dependencies]
 tempfile = "3.10"
