docs(config.toml.example): update example api_host to reflect correct format for user deployment configuration

--- a/config.toml.example
+++ b/config.toml.example
@@ -7,5 +7,5 @@ api_host = "https://convex-http.wavedash.gg"
 
 # For local development, change to:
 # open_browser_website_host = "http://localhost:5173"
-# api_host = "your-convex-deployment"
+# api_host = "https://{you_convex_deployment}.convex.site"
 
