--- a/config.toml.example
+++ b/config.toml.example
@@ -6,6 +6,6 @@ open_browser_website_host = "https://wavedash.gg"
 api_host = "https://convex-http.wavedash.gg"
 
 # For local development, change to:
-# open_browser_website_host = "http://localhost:5173"
+# open_browser_website_host = "http://wavedash.lvh.me"
 # api_host = "https://{you_convex_deployment}.convex.site"
 
