--- a/config.toml.example
+++ b/config.toml.example
@@ -1,11 +1,4 @@
-# Wavedash CLI Configuration
-# Copy this file to config.toml and customize for local development
-
-# Production (default)
-open_browser_website_host = "https://wavedash.gg"
-api_host = "https://convex-http.wavedash.gg"
-
-# For local development, change to:
-# open_browser_website_host = "http://wavedash.lvh.me"
-# api_host = "https://{you_convex_deployment}.convex.site"
-
+open_browser_website_host = "https://staging.wavedash.gg"
+api_host = "https://convex-http.staging.wavedash.gg"
+keyring_service = "wvdsh-dev"
+keyring_account = "api-key-dev"
