--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,6 +62,7 @@ tiny_http = "0.12"
 open = "5.0"
 url = "2.5"
 urlencoding = "2.1"
+envy = "0.4.2"
 
 
 
@@ -69,3 +70,8 @@ urlencoding = "2.1"
 [dev-dependencies]
 tempfile = "3.10"
 mockito = "1.4"
+
+# The profile that 'dist' will build with
+[profile.dist]
+inherits = "release"
+lto = "thin"
