--- a/.github/workflows/auto-tag.yml
+++ b/.github/workflows/auto-tag.yml
@@ -28,9 +28,9 @@ jobs:
         uses: rickstaa/action-create-tag@v1
         id: "tag_create"
         with:
-          tag: "v${{ steps.get_version.outputs.version }}"
+          tag: "${{ steps.get_version.outputs.version }}"
           tag_exists_error: false
-          message: "Release v${{ steps.get_version.outputs.version }}"
+          message: "Release ${{ steps.get_version.outputs.version }}"
           github_token: ${{ secrets.HOMEBREW_TAP_TOKEN }}
 
       - name: Create Latest Tag
