--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,10 +24,11 @@ tokio = { version = "1.40", features = ["full"] }
 futures = "0.3"
 
 # HTTP & Servers
-reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
+reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls", "http2"] }
 axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }
-axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
-rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
+axum-server = { version = "0.7", features = ["tls-rustls"] }
+rustls = { version = "0.23", default-features = false, features = ["std", "aws-lc-rs"] }
+aws-lc-rs = "1.0"
 tower = "0.4"
 tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
 rcgen = "0.12"
@@ -40,7 +41,6 @@ toml = "0.8"
 
 # Error Handling
 anyhow = "1.0"
-thiserror = "1.0"
 
 # Progress & UI
 indicatif = "0.17"
@@ -53,7 +53,6 @@ opendal = { version = "0.49", features = ["services-s3"] }
 
 # File operations
 walkdir = "2.5"
-tempfile = "3.10"
 mime_guess = "2.0"
 
 # Authentication
@@ -68,8 +67,6 @@ envy = "0.4.2"
 
 
 [dev-dependencies]
-tempfile = "3.10"
-mockito = "1.4"
 
 # The profile that 'dist' will build with
 [profile.dist]
