--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -127,6 +127,10 @@ jobs:
             curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
             echo "$HOME/.cargo/bin" >> $GITHUB_PATH
           fi
+      - name: "Install Doppler CLI"
+        uses: "dopplerhq/cli-action@v3"
+      - name: "Set Doppler Token"
+        run: "echo \"DOPPLER_TOKEN=${{ secrets.DOPPLER_TOKEN }}\" >> $GITHUB_ENV"
       - name: Install dist
         run: ${{ matrix.install_dist.run }}
       # Get the dist-manifest
