--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -22,4 +22,4 @@ publish-jobs = ["homebrew"]
 # Whether to install an updater program
 install-updater = true
 # Custom build command to inject Doppler secrets at compile time
-build-command = ["doppler", "run", "--", "cargo", "build", "--profile=dist"]
+# build-command = ["doppler", "run", "--", "cargo", "build", "--profile=dist"]
